third_party/move/move-compiler-v2/tests/ability-check/v1-typing/conditional_drop_invalid.exp

Diagnostics:
error: value of type `Box<R>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:10:9
   │
10 │         Box<R> { f: R{} };
   │         ^^^^^^^^^^^^^^^^^ implicitly dropped here since it is no longer used

error: value of type `Box<Box<R>>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:11:9
   │
11 │         Box<Box<R>> { f: Box { f: R{} } };
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implicitly dropped here since it is no longer used

error: value of type `Box<T>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:12:9
   │
12 │         Box<T> { f: t };
   │         ^^^^^^^^^^^^^^^ implicitly dropped here since it is no longer used

error: value of type `Box<Box<T>>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:13:9
   │
13 │         Box<Box<T>> { f: Box { f: t } };
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implicitly dropped here since it is no longer used

error: value of type `Pair<S, R>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:14:9
   │
14 │         Pair<S, R> { f1: S{}, f2: R{} };
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implicitly dropped here since it is no longer used

error: value of type `Pair<S, R>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:15:10
   │
15 │         (Pair<S, R> { f1: S{}, f2: R{} }, 0, @0x1);
   │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implicitly dropped here since it is no longer used

error: value of type `Box<R>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:17:9
   │
17 │         Box<R> { f: R {} } == Box<R> { f: R {} };
   │         ^^^^^^^^^^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used

error: value of type `Box<R>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:17:31
   │
17 │         Box<R> { f: R {} } == Box<R> { f: R {} };
   │                               ^^^^^^^^^^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used

error: value of type `Box<Box<R>>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:18:9
   │
18 │         Box<Box<R>> { f: Box { f: R {} } } == Box<Box<R>> { f: Box { f: R {} }};
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used

error: value of type `Box<Box<R>>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:18:47
   │
18 │         Box<Box<R>> { f: Box { f: R {} } } == Box<Box<R>> { f: Box { f: R {} }};
   │                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used

error: value of type `Box<T>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:19:9
   │
19 │         Box<T> { f: t } == Box<T> { f: t };
   │         ^^^^^^^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used

error: value of type `Box<T>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:19:28
   │
19 │         Box<T> { f: t } == Box<T> { f: t };
   │                            ^^^^^^^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used

error: value of type `Box<Box<T>>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:20:9
   │
20 │         Box<Box<T>> { f: Box { f: t } } == Box<Box<T>> { f: Box { f: t} };
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used

error: value of type `Box<Box<T>>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:20:44
   │
20 │         Box<Box<T>> { f: Box { f: t } } == Box<Box<T>> { f: Box { f: t} };
   │                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used

error: value of type `Pair<R, S>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:21:9
   │
21 │         Pair<R, S> { f1: R{}, f2: S{} } == Pair<R, S> { f1: R{}, f2: S{} };
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used

error: value of type `Pair<R, S>` does not have the `drop` ability
   ┌─ tests/ability-check/v1-typing/conditional_drop_invalid.move:21:44
   │
21 │         Pair<R, S> { f1: R{}, f2: S{} } == Pair<R, S> { f1: R{}, f2: S{} };
   │                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used
